# willow-sdk-rust

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_usage.rs  data_operations.rs  fund_subgroves_batch.rs  graphql_indexing.rs  light_client.rs  proof_verification.rs  register_solana_subgrove.rs  register_subgrove.rs  register_subgrove_from_manifest.rs  registration.rs  rotate_did.rs  token_operations.rs
examples/operations/: README.md  check_balances.rs  fund_app.rs  fund_subgrove.rs  list_registrations.rs  query_data.rs  register_app.rs  register_did.rs  register_subgrove.rs  store_data.rs  transfer.rs
src/: auth.rs  client.rs  consensus.rs  data.rs  erc8004.rs  errors.rs  eth_state.rs  files.rs  indexers.rs  indexing.rs  lib.rs  light_client.rs  privacy.rs  proof.rs  registration.rs  subgrove_config.rs  subscriptions.rs  token.rs  types.rs  utils.rs  validators.rs  verifiable_rpc.rs
tests/: basic_indexing_test.rs  data_integrity_test.rs  fresh_test.rs  light_client_demo.rs  light_client_enabled_test.rs  light_client_test.rs  multi_subgrove_test.rs  performance_test.rs  proof_verification_test.rs  query_operations_test.rs  subscriptions_test.rs  test_root_hash_methods.rs
