[package]
name = "willow-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Willow Team"]
description = "Rust SDK for Willow - decentralized data indexing protocol"
license = "MIT"
repository = "https://github.com/willow/willow-rust-sdk"
keywords = ["willow", "web3", "indexing", "did", "decentralized"]
categories = ["web-programming", "cryptography"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket client for GraphQL subscriptions over graphql-transport-ws
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Cryptography for DID auth
ed25519-dalek = "2.1"
secp256k1 = { version = "0.29", features = ["recovery", "rand"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"

# Encryption for private file subgroves
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
url = "2.5"
base64 = "0.22"

# Logging
log = "0.4"
tracing = { version = "0.1", optional = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
dirs = { version = "5.0", optional = true }

# Shared types with the server (token units, transaction types, etc.)
willow-types = { path = "../../crates/types" }

# Thin GKR verifier crate.
#
# With just the `verifiable-rpc` feature enabled, this pulls in only the
# binding-only path — pure sha2/subtle, no Expander transitive deps.
# With `verifiable-rpc-full` the SDK also pulls the Expander verifier
# subset via `willow-gkr-verify/full`; those deps are pinned to the
# `willow-network/Expander` fork via the [patch] block at the bottom of
# this file (keep in sync with the workspace root Cargo.toml).
willow-gkr-verify = { path = "../../crates/gkr-verify", optional = true }

# Pure-Rust full-soundness GKR verifier. No Expander in the dep graph,
# so compiles cleanly to wasm32-unknown-unknown. Enabled via the
# `verifiable-rpc-pure` feature; mutually exclusive with
# `verifiable-rpc-full` at runtime (pure takes precedence when both
# are on — the native Expander backend then becomes dead code).
willow-gkr-verify-pure = { path = "../../crates/gkr-verify-pure", features = ["registry"], optional = true }

# Light client dependencies - uses grovedb verify feature for lightweight proof verification
# These are included by default for trustless verification
grovedb = { version = "3.1.0", default-features = false, features = ["verify"] }
grovedb-version = "3.1.0"

# On `wasm32-unknown-unknown`, `getrandom` (pulled in transitively
# via base64 / serde_json / grovedb) needs its `js` feature so it
# can source entropy from `crypto.getRandomValues`. Without it the
# build fails with a `compile_error!` inside getrandom itself.
# Similarly `uuid`'s wasm backend needs its `js` feature —
# `"v4"` alone isn't sufficient on wasm32.
#
# Two `getrandom` versions pinned because the workspace has both
# major lines in the graph; each emits its own incompatible feature.
#
# NB: enabling these is *necessary* for wasm but not *sufficient* —
# the SDK's native HTTP/WebSocket/tokio-net stack still blocks the
# full `wasm32-unknown-unknown` build. See
# docs/todo/proposal-pure-rust-verifier.md for the larger wasm-
# ification story. For pure verification in browsers today, consume
# `willow-gkr-verify-pure` directly; it builds clean on wasm.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
env_logger = "0.11"

[features]
default = []
cli = ["dirs"]
tracing = ["dep:tracing"]
# Disable light client verification for minimal dependency footprint
# Use this if you trust your node and want faster compile times
no-light-client = []
# Enable client-side verification for the verifiable-RPC flow
# (GET /verifiable-rpc/:subgrove/:key with a GKR proof attached).
# Pure binding-only — fast compile, pure sha2/subtle, mobile-friendly.
verifiable-rpc = ["dep:willow-gkr-verify"]
# Extend `verifiable-rpc` with full-soundness GKR verification. Pulls in
# the Expander verifier subset via willow-gkr-verify's `full` feature
# (multi-minute cold build, multi-megabyte binary cost). Opt in when
# clients need Phase 2+ permissionless trust over the Phase 1 hosted-
# service trust model. See docs/todo/proposal-gkr-verify-crate.md.
verifiable-rpc-full = ["verifiable-rpc", "willow-gkr-verify/full"]
# Full-soundness GKR verification via the pure-Rust port
# (`willow-gkr-verify-pure`). Same guarantees as `verifiable-rpc-full`
# but no Expander transitive deps — the whole stack (Fiat-Shamir
# transcript, M31/M31Ext3 field math, GKR sumcheck, Orion PCS opening)
# is hand-rolled in pure Rust. Target audience: browser + mobile
# clients that can't compile the Expander C-FFI dependencies.
verifiable-rpc-pure = [
    "verifiable-rpc",
    "dep:willow-gkr-verify-pure",
    "willow-gkr-verify/registry",
]

[[bin]]
name = "willow-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

# Operation examples - individual consensus transactions
[[example]]
name = "register_did"
path = "examples/operations/register_did.rs"

[[example]]
name = "register_subgrove"
path = "examples/operations/register_subgrove.rs"

[[example]]
name = "store_data"
path = "examples/operations/store_data.rs"

[[example]]
name = "transfer"
path = "examples/operations/transfer.rs"

[[example]]
name = "fund_subgrove"
path = "examples/operations/fund_subgrove.rs"

# Query/read examples
[[example]]
name = "query_data"
path = "examples/operations/query_data.rs"

[[example]]
name = "check_balances"
path = "examples/operations/check_balances.rs"

[[example]]
name = "list_registrations"
path = "examples/operations/list_registrations.rs"

# Patch Expander deps to the willow-network fork so willow-gkr-verify's
# `full` feature resolves the same type universe the workspace does.
# Mirror this block with crates/Cargo.toml exactly — the fork rev must
# match. See docs/todo/proposal-gkr-verify-crate.md for why the fork
# exists (GPU CUDA kernels not yet upstream) and when we might retire
# it.
[patch."https://github.com/PolyhedraZK/Expander"]
gkr = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
gkr_engine = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
arith = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
transcript = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
poly_commit = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
config_macros = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
circuit = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
sumcheck = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
serdes = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
bin = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
mersenne31 = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
goldilocks = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
babybear = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
gf2 = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
gf2_128 = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
gkr_hashers = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
polynomials = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
utils = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
crosslayer_prototype = { git = "https://github.com/willow-network/Expander", rev = "17a14a192b7bbec3ecbc1480280d772e53803f40" }
