[package]
name = "willow-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Willow Team"]
description = "Rust SDK for Willow - decentralized data indexing protocol"
license = "MIT"
repository = "https://github.com/willow-network/willow-sdk-rust"
keywords = ["willow", "web3", "indexing", "did", "decentralized"]
categories = ["web-programming", "cryptography"]

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket client for GraphQL subscriptions over graphql-transport-ws
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Cryptography for DID auth
ed25519-dalek = "2.1"
secp256k1 = { version = "0.29", features = ["recovery", "rand"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"

# Encryption for private file subgroves
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
url = "2.5"
base64 = "0.22"

# Logging
log = "0.4"
tracing = { version = "0.1", optional = true }

# Used by examples for arg parsing.
clap = { version = "4.4", features = ["derive"] }

# Shared types with the server (token units, transaction types, etc.)
willow-types = { path = "../../crates/types" }

willow-gkr-verify = { path = "../../crates/gkr-verify", features = ["registry"], optional = true }

# Light client dependencies - uses grovedb verify feature for lightweight proof verification
# These are included by default for trustless verification
grovedb = { version = "3.1.0", default-features = false, features = ["verify"] }
grovedb-version = "3.1.0"

# Alloy primitives + MPT verifier for verifiable Ethereum state reads.
# Optional — only pulled when the `verifiable-rpc` feature is on. Range
# matches willow-network so the workspace resolves a single alloy.
alloy = { version = ">=1.1, <1.6", features = ["eips", "consensus", "rpc-types-eth"], optional = true }
alloy-primitives = { version = "1", optional = true }
alloy-rlp = { version = "0.3", optional = true }
alloy-trie = { version = "0.9", optional = true }

# Both major lines of getrandom appear transitively; both need their
# JS feature on wasm32 to source entropy from `crypto.getRandomValues`.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
env_logger = "0.11"

[features]
default = ["verifiable-rpc"]
tracing = ["dep:tracing"]
no-light-client = []
verifiable-rpc = [
    "dep:willow-gkr-verify",
    "willow-gkr-verify/registry",
    "dep:alloy",
    "dep:alloy-primitives",
    "dep:alloy-rlp",
    "dep:alloy-trie",
]

# Operation examples - individual consensus transactions
[[example]]
name = "register_did"
path = "examples/operations/register_did.rs"

[[example]]
name = "register_subgrove"
path = "examples/operations/register_subgrove.rs"

[[example]]
name = "store_data"
path = "examples/operations/store_data.rs"

[[example]]
name = "transfer"
path = "examples/operations/transfer.rs"

[[example]]
name = "fund_subgrove"
path = "examples/operations/fund_subgrove.rs"

# Query/read examples
[[example]]
name = "query_data"
path = "examples/operations/query_data.rs"

[[example]]
name = "check_balances"
path = "examples/operations/check_balances.rs"

[[example]]
name = "list_registrations"
path = "examples/operations/list_registrations.rs"

